@@ -1,6 +1,7 @@
 Version 3.5837 (October 30th 2016)
 - Fixed: Blockly/Lua, FOR and RANDOM are now again in minutes
 - Changed: Shortlog charts for Temperature, Current and Smartlog are now using a spline
+- Changed: Lua/Blockly, Notifications are now not blocking
 
 Version 3.5834 (October 29th 2016)
 - Implemented: TSL2561 illuminance I2C sensor (ldrolez)
